# graph-sea

./: .env  .gitignore  Cargo.toml  schema.gql
database/: Cargo.toml
database/src/: lib.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231010_000001_create_user_table.rs  m20231010_000002_create_post_table.rs  m20231010_000003_add_kind_col_to_post_table.rs  m20231011_000004_add_password_col_to_user_table.rs  m20231011_000005_add_unique_name_col_user_table.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  schema.rs
shared/src/database/entities/: post.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
shared/src/database/repositories/: post.rs  user.rs
shared/src/schema/: models.rs  mutation.rs  query.rs
shared/src/schema/impls/: auth.rs  post.rs  user.rs
shared/src/schema/models/: auth.rs  paginate.rs  post.rs  user.rs
shared/src/security/: authentication.rs
src/: main.rs
