[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "migration",
    "shared"
]

[package.metadata.commands]
sea-gen = "sea generate entity -o shared/src/database/entities --with-serde both"

[dependencies]
axum = "0.6.20"
async-graphql-axum = "6.0.7"
shared = { path = "./shared" }
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
