[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
sea-orm = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json" ] }