[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = "6.0.7"
dotenv = "0.15.0"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres","runtime-tokio-native-tls","macros"] }
serde = { version = "1.0.188", features = ["derive"] }
