[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.75"
async-graphql = "6.0.7"
sea-orm = { version = "0.12.3", features = ["sqlx-postgres","runtime-tokio-native-tls","macros"] }
serde = { version = "1.0.188", features = ["derive"] }
jsonwebtoken = "8.3.0"
serde_json = "1.0.107"
axum = "0.6.20"
futures = "0.3.28"
bcrypt = "0.15.0"
deadpool-redis = "0.13.0"
chrono = "0.4.26"
thiserror = "1.0.49"
